--- a/frontend/src/NavBar/NavBar.css
+++ b/frontend/src/NavBar/NavBar.css
@@ -3,10 +3,11 @@
     border-bottom: 1px solid #1a1a1a;
     border-radius: 0;
     margin-bottom: 0;
-    min-height: 50px;
+    min-height: 10vh;
     padding: 0;
     position: fixed;
     top: 0;
+    font-size: 25px;
     width: 100%;
     z-index: 1000;
 }
@@ -32,6 +33,7 @@
 
 .nav-link {
     color: #fff !important;
+    padding: 10px;
 }   
 
 .navbar-nav > li > a:hover, .navbar-nav > li > a:focus {
@@ -93,4 +95,119 @@ justify-content-end {
     margin-bottom: 0;
     padding-left: 0;
     list-style: none;
+}
+
+.navbar-nav > li {
+    display: inline-block;
+    float: none;
+}
+
+.navbar a{
+    color: #fff;
+}
+
+.navbar a:hover{
+    color: #5a9fd3;
+}
+
+.navbar-nav > li > a {
+    padding-top: 0;
+    padding-bottom: 0;
+    height: 50px;
+}
+
+.navbar-nav .open .dropdown-menu {
+    background-color: #fff;
+    border-radius: 0;
+    border: none;
+    box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    -webkit-box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    -moz-box-shadow: 0 0 10px rgba(0,0,0,0.2);
+}
+
+.navbar-nav a:hover {
+    background-color: #5a74d3;
+}
+
+.search-bar {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    width: 15vw;
+    height: 40px;
+    border-radius: 25px;
+    border: none;
+    padding: 10px;
+    font-size: 15px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    -webkit-box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    -moz-box-shadow: 0 0 10px rgba(0,0,0,0.2);
+}
+
+.search-bar:focus {
+    outline: none;
+}
+
+.search-btn {
+    background-color: #5a74d3;
+    border: none;
+    color: #000;
+    font-size: 15px; 
+    height: 40px;
+    margin-left: -40px;
+    padding: 10px;
+    border-radius: 50%;
+    box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    -webkit-box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    -moz-box-shadow: 0 0 10px rgba(0,0,0,0.2);
+}
+
+.search-btn:hover {
+    background-color: #9da8cf;
+}
+
+.profile-img {
+    width: auto;
+    padding: 0;
+    margin: -10;
+}
+
+.profile-img button:hover {
+    cursor: pointer;
+}
+
+.profile-Menu {
+    position: absolute;
+    top: 60px;
+    right: 0;
+    width: 200px;
+    background: #02103cb7;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 10px;
+    display: none;
+    z-index: 1000;
+}
+
+.profile-Menu :active {
+    background: #5a74d3;
+    color: #fff;
+}
+
+.profile-img button {
+    background: none;
+    border: none;
+    padding: 0;
+    margin: 0;
+    width: auto;
+    text-align: left;
+    font-size: 15px;
+    color: #fff;
+}
+
+.profile-img button:hover {
+    width:auto;
+    background: #5a74d3;
+    color: #fff;
 }
